--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -59,10 +59,10 @@ header {
   /* Mobile styles */
   @media (max-width: 620px) {
     header {
-      height: 125px;
-      /* min-height: 150px;
+      height: auto;
+      /* min-height: 150px; */
       flex-direction: column;
-      align-items: center; */
+      align-items: center;
     }
     
     nav {
@@ -94,7 +94,7 @@ header {
   /* Small mobile styles */
   @media (max-width: 480px) {
     header {
-      height: 100px;
+      height: auto;
     }
     
     .main-logo-container {
