--- a/src/styles/doctorList.css
+++ b/src/styles/doctorList.css
@@ -38,18 +38,18 @@
   color: #4a6da7;
 }
   
-.close-button {
+.dl-close-button {
   background: none;
   border: none;
   font-size: 24px;
   cursor: pointer;
   color: #666;
   position: absolute;
-  padding-left: 480px;
+  padding-left: 485px;
   padding-bottom: 40px;
 }
   
-.close-button:hover {
+.dl-close-button:hover {
   color: #333;
 }
   
@@ -174,7 +174,7 @@
     font-size: 1.3rem;
   }
   
-  .close-button {
+  .dl-close-button {
     padding-left: 0;
     right: 10px;
     padding-bottom: 0;
@@ -214,7 +214,7 @@
     font-size: 1.1rem;
   }
   
-  .close-button {
+  .dl-close-button {
     font-size: 20px;
     top: 0;
   }
