--- a/src/styles/doctors.css
+++ b/src/styles/doctors.css
@@ -17,11 +17,11 @@
   margin-bottom: 30px;
 }
 
-.search-form {
+.doctors-search-form {
   margin-bottom: 15px;
 }
 
-.search-input-container {
+.doctors-search-input-container {
   display: flex;
   align-items: center;
   position: relative;
@@ -29,14 +29,14 @@
   margin: 0 auto;
 }
 
-.search-icon {
+.doctors-search-icon {
   position: absolute;
   left: 15px;
   width: 20px;
   height: 20px;
 }
 
-.search-input {
+.doctors-search-input {
   flex: 1;
   padding: 12px 40px 12px 40px;
   border: 1px solid #ddd;
@@ -46,13 +46,13 @@
   width: 100%;
 }
 
-.search-input:focus {
+.doctors-search-input:focus {
   outline: none;
   border-color: #9bb4ce;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
-.search-button {
+.doctors-search-button {
   position: absolute;
   right: 5px;
   background-color: #ddd;
@@ -66,7 +66,7 @@
   cursor: pointer;
 }
 
-.search-button:hover {
+.doctors-search-button:hover {
   background-color: #ccc;
 }
 
@@ -219,12 +219,12 @@
     padding: 15px;
   }
   
-  .search-input {
+  .doctors-search-input {
     padding: 10px 40px;
     font-size: 15px;
   }
   
-  .search-icon {
+  .doctors-search-icon {
     width: 18px;
     height: 18px;
   }
@@ -262,18 +262,18 @@
     padding: 8px 0;
   }
   
-  .search-input {
+  .doctors-search-input {
     padding: 8px 35px;
     font-size: 14px;
   }
   
-  .search-icon {
+  .doctors-search-icon {
     width: 16px;
     height: 16px;
     left: 12px;
   }
   
-  .search-button {
+  .doctors-search-button {
     width: 25px;
     height: 25px;
   }
