--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -29,7 +29,7 @@
     font-size: 24px;
     background: none;
     border: none;
-    color: white;
+    color: #656464;
     cursor: pointer;
   }
   
@@ -51,6 +51,7 @@
     .burger-menu {
       display: block;
       font-size: 2.5rem;
+      padding-left: 340px;
     }
   
     .nav-links {
