--- a/src/styles/medicalCentres.css
+++ b/src/styles/medicalCentres.css
@@ -142,7 +142,7 @@
   margin-bottom: 20px;
 }
   
-.back-to-top {
+.mc-back-to-top {
   display: flex;
   justify-content: flex-end;
   margin: 20px 0;
@@ -151,7 +151,7 @@
   color: var(--secondaryText);
 }
   
-.back-to-top:hover {
+.mc-back-to-top:hover {
   color: var(--accent);
 }
   
@@ -210,7 +210,7 @@
   
 .centre-name {
   color: var(--primaryText);
-  text-align: center !important;
+  text-align: center;
   margin-bottom: 10px;
   font-size: 1.1rem;
   margin-top: -30px;
