--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -34,7 +34,7 @@ p {
 }
 
 .password-strength {
-  margin-top: 5px;
+  margin: 5px 0;
   font-size: 0.8rem;
 }
 
@@ -51,7 +51,6 @@ p {
 }
 
 .password-requirements {
-  margin-top: -10px;
   margin-bottom: 10px;
   font-size: 0.8rem;
   color: #777;
