--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -122,6 +122,22 @@ p {
   text-align: center;
 }
 
+.password-toggle-btn {
+  background: transparent;
+  border: none;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.password-toggle-btn:hover {
+  background-color: transparent;
+}
+
 button {
   width: 100%;
   height: 2.5rem;
