--- a/src/styles/reactDatePicker.css
+++ b/src/styles/reactDatePicker.css
@@ -1,4 +1,5 @@
 .react-datepicker {
+  transform: translate(25px, 220px);
   border: 1px solid var(--secondaryBG);
   border-radius: 0.25rem;
 }
@@ -24,4 +25,16 @@
 
 .my-datepicker input {
   width: 100% !important;
+}
+
+@media (max-width: 768px) {
+  .react-datepicker {
+    transform: translate(20px, 200px);
+  }
+}
+
+@media (max-width: 480px) {
+  .react-datepicker {
+    transform: translate(15px, 250px);
+  }
 }
