--- a/src/styles/reactDatePicker.css
+++ b/src/styles/reactDatePicker.css
@@ -1,5 +1,4 @@
 .react-datepicker {
-  transform: translate(25px, 220px);
   border: 1px solid var(--secondaryBG);
   border-radius: 0.25rem;
 }
@@ -14,6 +13,10 @@
   color: white;
 }
 
+.react-datepicker_navigation {
+  display: hidden;
+}
+
 .react-datepicker-wrapper {
   width: 100% !important;
   display: block !important;
@@ -25,16 +28,4 @@
 
 .my-datepicker input {
   width: 100% !important;
-}
-
-@media (max-width: 768px) {
-  .react-datepicker {
-    transform: translate(20px, 200px);
-  }
-}
-
-@media (max-width: 480px) {
-  .react-datepicker {
-    transform: translate(15px, 250px);
-  }
 }
