--- a/src/styles/doctorAvailabilities.css
+++ b/src/styles/doctorAvailabilities.css
@@ -25,16 +25,20 @@
 
 .doctor-availabilities-header {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   margin-bottom: 10px;
   padding-bottom: 8px;
   border-bottom: 1px solid #eee;
   position: relative; 
+  height: 30px;
 }
 
 .doctor-availabilities-header h2 {
   margin: 0;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
   color: var(--accent);
   font-size: 1.2rem;
   text-align: center; 
@@ -43,17 +47,18 @@
 .availability-close-button {
   background: none;
   border: none;
+  text-align: right;
+  width: 20px;
   font-size: 22px;
   cursor: pointer;
   color: #666;
   padding-bottom: 10px;
   position: absolute;
-  padding-left: 385px;
+  right: 10px;
 }
 
 .availability-close-button:hover {
-  color: #333;
-}
+background-color: transparent;}
 
 .doctor-info-compact {
   background-color: #f5f5f5;
