--- a/src/styles/doctorList.css
+++ b/src/styles/doctorList.css
@@ -43,15 +43,16 @@
   background: none;
   border: none;
   font-size: 24px;
+  width: 20px;
   cursor: pointer;
   color: #666;
   position: absolute;
-  padding-left: 485px;
+  right: 10px;
   padding-bottom: 40px;
 }
   
 .dl-close-button:hover {
-  color: #333;
+background-color: transparent;
 }
   
 .doctors-container {
